@@ -1,1 +1,12 @@
 # Online-Photo-Exploring-App-with-Real-Time-Interaction
+Built a photo-sharing app including frontend and backend development to allow users to post photos and 
+interact with others in real time, using JAVA and MySQL.
+Utilized following, hashtag, and personal networks to customize features with user categorization.
+
+```
+Command to start the application after opening MySQL database.
+• javac --module-path $env:PATH_TO_FX --add-modules=javafx.controls,javafx.fxml,javafx.swing -cp ".;mysql-connector-java-8.0.20.jar" *.java
+• java --module-path $env:PATH_TO_FX --add-modules=javafx.controls,javafx.fxml,javafx.swing -cp ".;mysql-connector-java-8.0.20.jar" First
+```
+### Flow Chart
+<img width="416" alt="Screenshot 2022-10-29 201542" src="https://user-images.githubusercontent.com/70581390/198831188-286326e2-7ab0-4f79-8a0f-d2fb3320fd04.png">
